# air-quality-dashboard

./: .flake8  .gitattributes  .gitignore  Dockerfile  README.md  download_data.py  entrypoint.sh  extract_metoffice.py  pyproject.toml  report_generator.py  requirements.txt  run_pipeline.py
.github/workflows/: ci-cd.yaml  ci-cd.yml
.streamlit/: secrets.toml
app/: app.py
data/: README.md  airquality.duckdb
data/clean/: clean  clean_air_quality.csv
notebooks/: 01_eda.ipynb  02_pipeline.ipynb
prototype/cleaning/: clean.py
prototype/ingestion/: ingest.py
prototype/tests/: test_clean.py  test_ingest.py
report/: appendix_data_suitability.md  intro.md
reports/: report_generator.py
scripts/: fetch_defra.py
src/aq_dashboard/: core.py
