[project]
name = "poetry add pandas streamlit jupyterlab matplotlib seaborn duckdb"
version = "0.1.0"
description = ""
authors = [
    {name = "git add pyproject.toml poetry.lock"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
